--- a/doc/libconfig.texi
+++ b/doc/libconfig.texi
@@ -6,8 +6,8 @@
 @setfilename libconfig.info
 @settitle libconfig
 
-@set edition 1.4.9
-@set update-date 28 September 2012
+@set edition 1.5
+@set update-date 26 May 2014
 @set subtitle-text A Library For Processing Structured Configuration Files
 @set author-text Mark A.@: Lindner
 
@@ -839,6 +839,15 @@ setting was not found.
 
 @end deftypefun
 
+@deftypefun {config_setting_t *} config_setting_lookup (@w{const config_setting_t * @var{setting}}, @w{const char * @var{path}})
+
+This function locates a setting by a path @var{path} relative to
+the setting @var{setting}. It returns a pointer to the
+@code{config_setting_t} structure on success, or @code{NULL} if the
+setting was not found.
+
+@end deftypefun
+
 @deftypefun int config_setting_get_int (@w{const config_setting_t * @var{setting}})
 @deftypefunx {long long} config_setting_get_int64 (@w{const config_setting_t * @var{setting}})
 @deftypefunx double config_setting_get_float (@w{const config_setting_t * @var{setting}})
@@ -1539,6 +1548,15 @@ or @var{name}) does not refer to a valid element, a
 Iterating over a group's child settings with an integer index will
 return the settings in the same order that they appear in the
 configuration.
+
+@end deftypemethod
+
+@deftypemethod Setting {Setting &} lookup (@w{const char * @var{path}})
+@deftypemethodx Setting {Setting &} lookup (@w{const std::string &@var{path}})
+
+This function locates a setting by a path @var{path} relative to
+this setting. If requested setting is not found, a
+@code{SettingNotFoundException} is thrown.
 
 @end deftypemethod
 
